--- a/backend/api/templates/invoicePDF_bookingPayment.html
+++ b/backend/api/templates/invoicePDF_bookingPayment.html
@@ -119,7 +119,7 @@
             <td colspan="3" class="text-right"><strong>Tien coc({{parameters.tiledatcoc|floatformat}}%):</strong></td>
             <td>{{bookingDetails.tiendatcoc|floatformat|intcomma }}</td>
           </tr>
-          <tr>
+          {% comment %} <tr>
             <td colspan="3" class="text-right">
               <strong>Tien khach tra:</strong>
             </td>
@@ -128,7 +128,7 @@
           <tr>
             <td colspan="3" class="text-right"><strong>Tien thua:</strong></td>
             <td>fdgfg</td>
-          </tr>
+          </tr> {% endcomment %}
         </tbody>
       </table>
       <p class="notice">
