--- a/backend/api/templates/invoicePDF_invoicePayment.html
+++ b/backend/api/templates/invoicePDF_invoicePayment.html
@@ -125,7 +125,7 @@
             <td colspan="3" class="text-right"><strong>Con lai:</strong></td>
             <td>{{invoiceDetails.conlai|floatformat|intcomma }}</td>
           </tr>
-          <tr>
+          {% comment %} <tr>
             <td colspan="3" class="text-right">
               <strong>Tien khach tra:</strong>
             </td>
@@ -134,7 +134,7 @@
           <tr>
             <td colspan="3" class="text-right"><strong>Tien thua:</strong></td>
             <td>₫ 0</td>
-          </tr>
+          </tr> {% endcomment %}
         </tbody>
       </table>
     </div>
