--- a/backend/api/templates/searchResult.html
+++ b/backend/api/templates/searchResult.html
@@ -60,8 +60,7 @@
                 <select class="form-select" name="masanh" id="masanh" aria-label="Default select example" disabled>
 
                   {% for sanh in lobbies %}
-                  <option value="{{ sanh.masanh }}" {% if sanh.masanh == wedding.masanh %} selected {% endif %}>{{
-                    sanh.tensanh }}</option>
+                  <option value="{{ sanh.masanh }}" {% if sanh.masanh == wedding.masanh %} selected {% endif %}>{{sanh.tensanh }}</option>
                   {% endfor %}
                 </select>
               </div>
@@ -82,6 +81,9 @@
                   </button>
                       <a href="{% url 'paymentConfirm' wedding.matieccuoi %}"><button type="button" class="btn btn-primary launch" 
                         > Thanh toán
+                      </button></a>
+                      <a href="{% url 'cancelConfirm' wedding.matieccuoi %}"><button type="button" class="btn btn-danger launch" 
+                        > Hủy
                       </button></a>
                   
 
