fix add hoa don and cancel hoa don

--- a/backend/api/templates/paymentConfirm.html
+++ b/backend/api/templates/paymentConfirm.html
@@ -186,7 +186,7 @@
     axios.post('/paymentInvoice/', invoiceData)
         .then(response => {
             alert('Invoice created successfully!');
-            // Optionally redirect or clear form
+            window.location.href = '/report/';
         })
         .catch(error => {
             console.error('There was an error!', error);
