--- a/backend/api/templates/dashboard.html
+++ b/backend/api/templates/dashboard.html
@@ -1,6 +1,15 @@
 {% extends 'layout.html' %} {% block title %} {% endblock %} {% block content %}
 {% csrf_token %}
-<div class="row">
+<style>
+  .dashboard-container{
+    height: 600px;
+    overflow: scroll;
+  }
+  .dashboard-container::-webkit-scrollbar{
+    display: none;
+  }
+</style>
+<div class="dashboard-container " >
   <div class="col-12">
     <div class="card mb-4">
       <div class="card-body text-center">
