--- a/backend/api/templates/login.html
+++ b/backend/api/templates/login.html
@@ -1,20 +1,72 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+    />
     <title>Login</title>
-</head>
-<body>
-    <h2>Login</h2>
-    <form action="/login/" method="post">
-        {% csrf_token %}
-        <label for="username">Username:</label><br>
-        <input type="text" id="username" name="username"><br>
-        <label for="password">Password:</label><br>
-        <input type="password" id="password" name="password"><br><br>
-        <input type="submit" value="Login">
-    </form>
-    <p>{{error_message}}</p>
-</body>
+    <style>
+      .divider:after,
+      .divider:before {
+        content: "";
+        flex: 1;
+        height: 1px;
+        background: #eee;
+      }
+      .h-custom {
+        height: calc(100% - 73px);
+      }
+      @media (max-width: 450px) {
+        .h-custom {
+          height: 100%;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <section class="vh-100">
+      <div class="container-fluid h-custom">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class=" col-xl-4">
+            <img
+              src="../static/image/logo.png"
+              class="img-fluid"
+              alt="logo image"
+              style="max-width: 400px;"
+            />
+          </div>
+          <div class=" col-xl-4 offset-xl-1 border rounded py-5 px-3">
+            <h2>Welcome to UIT Wedding Restaurant</h2>
+            <form action="/login/" method="post">
+                {% csrf_token %}
+                <label class="form-label" for="username">Username:</label><br>
+                <input type="text" id="username" name="username" class="form-control form-control-lg"><br>
+                <label class="form-label" for="password">Password:</label><br>
+                <input type="password" id="password" name="password" class="form-control form-control-lg"><br><br>
+
+               
+                <div class="button-gr d-flex align-items-center justify-content-between mt-0">
+                    <input type="submit" class="btn btn-primary btn-lg" value="Đăng nhập">
+                    <a href="/admin">
+                        <button class="btn btn-primary btn-lg">
+                            Quản lý
+                        </button>
+                    </a>
+                </div>
+                <p class="text-danger mt-3 "> {{error}}</p>
+            </form>
+            
+            
+          </div>
+        </div>
+      </div>
+     
+    </section>
+   
+  </body>
 </html>
