--- a/backend/api/static/css/style.css
+++ b/backend/api/static/css/style.css
@@ -76,4 +76,19 @@
   main {
     width: 90%;
   }
+  nav a {
+      width: 100%;
+      height: 40px;
+      color: #1f1c2e;
+       
+      text-decoration: none;
+      padding: 10px 15px;
+    
+    
+    
+  }
+  nav a:hover{
+      background-color: #1f1c2e;
+      color: #fff;
+  }
   
