validate cancel and edit wedding

--- a/backend/api/templates/searchResult.html
+++ b/backend/api/templates/searchResult.html
@@ -72,7 +72,21 @@
               </div>
               <div class="d-flex justify-content-end">
                 <div class="btn-group" role="group">
+                  {% if not wedding.within_7_days %}
                   <button type="button" class="btn btn-outline-secondary" id="editButton">
+                    Chỉnh sửa
+                  </button>
+                  <button type="button" class="btn btn-outline-secondary save-button" id="saveButton" style="display: none">Lưu</button>
+                  <a href="{% url 'paymentConfirm' wedding.matieccuoi %}" class="btn btn-primary">Thanh toán</a>
+                  <a href="{% url 'cancelConfirm' wedding.matieccuoi %}" class="btn btn-danger" >Hủy</a>
+                  {% else %}
+                    <a href="{% url 'paymentConfirm' wedding.matieccuoi %}" class="btn btn-primary">Thanh toán</a>
+                    <a href="#" class="btn btn-danger" onclick="event.preventDefault(); if (confirm('Bạn có chắc chắn muốn hủy tiệc cưới này không? Vì ngày đãi tiệc chỉ còn 7 ngày, nếu hủy sẽ mất tiền cọc và toàn bộ tổng tiền bàn ')) { window.location.href = '{% url 'cancelConfirm' wedding.matieccuoi %}'; }">Hủy</a>
+
+                   
+                  {% endif %}
+                 
+                  <!-- <button type="button" class="btn btn-outline-secondary" id="editButton">
                     Chỉnh sửa
                   </button>
 
@@ -85,7 +99,7 @@
                       <a href="{% url 'cancelConfirm' wedding.matieccuoi %}"><button type="button" class="btn btn-danger launch" 
                         > Hủy
                       </button></a>
-                  
+                   -->
 
                 
                 </div>
