--- a/backend/api/templates/foodTable.html
+++ b/backend/api/templates/foodTable.html
@@ -19,7 +19,7 @@
         <td id="dongia_{{food.mamonan}}" value={{food.dongia}}>{{ food.dongia |floatformat|intcomma}}</td>
         <td><input
           type="text"
-          class="ghichuMA_input"
+          class="ghichuMA_input px-1 text-secondary"
           name="ghichudichvu"
           placeholder="Ghi chú ..."
           id="ghichu_{{food.mamonan}}"
