--- a/backend/api/templates/cancelConfirm.html
+++ b/backend/api/templates/cancelConfirm.html
@@ -68,7 +68,7 @@
            
             
             <div class="cancel-container p-2">
-                <h2 class="text-center py-3">XÁC NHẬN THÔNG TIN HOÁ ĐƠN</h2>
+                <h2 class="text-center py-3">XÁC NHẬN HỦY</h2>
                 <div class="info row justify-content-between">
                     <div class="col-3">
                         <p>Ngày hủy: {{wedding.ngayhuy}}</p>
@@ -76,7 +76,7 @@
                         <p>Tên chú rể: {{wedding.tenchure}}</p>
                     </div>
                     <div class="col-3">
-                        <p>Số ngày hủy sớm : {{wedding.songayhuysom}}</p>
+                        <p>Số ngày hủy sớm : {{songayhuysom}}</p>
                         <p>Số lượng bàn: {{wedding.soluongban}}</p>
                         <p>Đơn giá bàn: {{wedding.dongiaban|intcomma}}</p>
                     </div>
@@ -98,7 +98,7 @@
                         </tr>
                         <tr>
                             <td>Số tiền cần thanh toán:</td>
-                            <td>0 đ</td>
+                            <td>{{wedding.conlai|intcomma}}</td>
                         </tr>
                     </tbody>
                 </table>
@@ -139,8 +139,8 @@
     
     axios.post('/paymentInvoice/', invoiceData)
         .then(response => {
-            alert('Invoice created successfully!');
-            // Optionally redirect or clear form
+            alert('Wedding cancel successfully!');
+            window.location.href = '/report/';
         })
         .catch(error => {
             console.error('There was an error!', error);
