--- a/backend/api/templates/invoicePDF_bookingPayment.html
+++ b/backend/api/templates/invoicePDF_bookingPayment.html
@@ -37,6 +37,10 @@
         text-align: center;
         font-size: 15px;
       }
+      .invoice-box .table th{
+        max-height: 50px;
+        color: red;
+      }
     </style>
   </head>
   <body>
@@ -83,7 +87,7 @@
       </table>
       <table class="table">
         <thead>
-          <tr class="heading">
+          <tr class="heading" style="max-height: 50px;">
             <th>Ma dich vu</th>
             <th>So luong</th>
             <th>Don gia</th>
@@ -100,33 +104,34 @@
           </tr>
           {%endfor%}
           <tr>
-            <td colspan="3" class="text-right">
+            <td colspan="4" class="text-right">
               <strong>Tong tien dich vu:</strong>
             </td>
             <td>{{bookingDetails.tongtiendichvu|floatformat|intcomma }}</td>
           </tr>
           <tr>
-            <td colspan="3" class="text-right">
+            <td colspan="4" class="text-right">
               <strong>Tong tien ban:</strong>
             </td>
             <td>{{bookingDetails.tongtienban|floatformat|intcomma }}</td>
           </tr>
           <tr>
-            <td colspan="3" class="text-right"><strong>Tong cong:</strong></td>
+            <td colspan="4" class="text-right"><strong>Tong cong:</strong></td>
             <td>{{bookingDetails.tongtiendattiec|floatformat|intcomma }}</td>
           </tr>
           <tr>
-            <td colspan="3" class="text-right"><strong>Tien coc({{parameters.tiledatcoc|floatformat}}%):</strong></td>
+            <td colspan="4" class="text-right"><strong>Tien coc({{parameters.tiledatcoc|floatformat}}%):</strong></td>
             <td>{{bookingDetails.tiendatcoc|floatformat|intcomma }}</td>
           </tr>
-          {% comment %} <tr>
-            <td colspan="3" class="text-right">
+          {% comment %} 
+          <tr>
+            <td colspan="4" class="text-right">
               <strong>Tien khach tra:</strong>
             </td>
             <td>hsdgs</td>
           </tr>
           <tr>
-            <td colspan="3" class="text-right"><strong>Tien thua:</strong></td>
+            <td colspan="4" class="text-right"><strong>Tien thua:</strong></td>
             <td>fdgfg</td>
           </tr> {% endcomment %}
         </tbody>
